<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF"
        tools:context=".Registrazione">


        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="131dp"
            android:layout_marginBottom="579dp"
            android:src="@drawable/avo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/scritta1"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="152dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="502dp"
            android:fontFamily="@font/bungee"
            android:text="Benvenuto"
            android:textColor="#104281"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/scritta2"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="229dp"
            android:layout_marginEnd="17dp"
            android:layout_marginBottom="472dp"
            android:text="Registrati"
            android:textColor="#DDA320"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="302dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="165dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:boxStrokeColor="#DDA320"
                app:hintTextColor="#104281"
                tools:layout_editor_absoluteX="4dp"
                tools:layout_editor_absoluteY="393dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="#000"
                    android:textCursorDrawable="@null"
                    tools:layout_editor_absoluteX="29dp"
                    tools:layout_editor_absoluteY="292dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:hint="@string/password"
                app:boxStrokeColor="#DDA320"
                app:counterEnabled="true"
                app:counterMaxLength="16"
                app:hintTextColor="#104281"
                app:passwordToggleEnabled="true"
                tools:layout_editor_absoluteX="4dp"
                tools:layout_editor_absoluteY="393dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/psw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="#000"
                    android:textCursorDrawable="@null"
                    tools:layout_editor_absoluteX="29dp"
                    tools:layout_editor_absoluteY="292dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:hint="@string/password2"
                app:boxStrokeColor="#DDA320"
                app:counterEnabled="true"
                app:counterMaxLength="16"
                app:hintTextColor="#104281"
                app:passwordToggleEnabled="true"
                tools:layout_editor_absoluteX="4dp"
                tools:layout_editor_absoluteY="393dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pswC"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:textColor="#000"
                    android:textCursorDrawable="@null"
                    tools:layout_editor_absoluteX="29dp"
                    tools:layout_editor_absoluteY="292dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/bottReg"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="#104281"
            android:text="@string/bottReg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner1" />

        <ImageButton
            android:id="@+id/bottMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/freccia"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:color/transparent" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/box"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>