<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".Login">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="579dp"
        android:src="@drawable/avo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="152dp"
        android:layout_marginBottom="477dp"
        android:fontFamily="@font/bungee"
        android:text="Bentornato"
        android:textColor="#104281"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="229dp"
        android:layout_marginBottom="477dp"
        android:text="Effettua il login"
        android:textColor="#DDA320"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registr"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="625dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="104dp"
        android:clickable="true"
        android:text="Se non sei ancora registrato clicca qui!"
        android:textAlignment="center"
        android:textColor="#104281"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="171dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="302dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="258dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:boxStrokeColor="#DDA320"
            app:hintTextColor="#104281"
            tools:layout_editor_absoluteX="4dp"
            tools:layout_editor_absoluteY="393dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="#000"
                android:textCursorDrawable="@null"
                tools:layout_editor_absoluteX="29dp"
                tools:layout_editor_absoluteY="292dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pswTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:hint="@string/password"
            app:boxStrokeColor="#DDA320"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:hintTextColor="#104281"
            app:passwordToggleEnabled="true"
            tools:layout_editor_absoluteX="4dp"
            tools:layout_editor_absoluteY="393dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/psw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="#000"
                android:textCursorDrawable="@null"
                tools:layout_editor_absoluteX="29dp"
                tools:layout_editor_absoluteY="292dp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/bottReg"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="550dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="173dp"
        android:backgroundTint="#104281"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/bottMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="17dp"
        android:background="@drawable/mappa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/transparent" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_marginStart="301dp"
        android:layout_marginTop="483dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="209dp"
        android:text="ToggleButton"
        android:textOff="No"
        android:textOn="Si"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="255dp"
        android:layout_height="28dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="483dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="214dp"
        android:text="Resta connesso :"
        android:textAlignment="center"
        android:textColor="#104281"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>